[project]
name = "figure"
description = "Auxiliary Python code for figure"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Atlanswer", email = "atlanswer@gmail.com" }]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
